# mycouch

./: $null  .env.example  .env.server  .gitignore  AGENTS.md  API_REFERENCE.md  BAND_DELETION_CASCADE_FIX.md  CLAUDE.md  CLERK_SETUP.md  COUCHDB.md  CROWDSTRIKE_DEBUG.md  DEBUGGING.md  DEPLOY.md  DOCKER_SETUP.md  FINAL_SECURITY_SUMMARY.txt  GETTING_STARTED.md  GITHUB_ACTIONS_DEPLOY.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_PROGRESS.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_PLAN.md  INTEGRATION_TEST_SETUP.md  JWT_TESTING_EXPLAINED.md  MANGO_QUERY_FIX_PLAN.md  Makefile  PRD.md  PRE_PUBLIC_RELEASE_CHECKLIST.md  PROJECT_STRUCTURE.md  README.md  ROUTING_FIX_EXPLANATION.md  SECRETS_CLEANUP_COMPLETE.txt  SECURITY.md  SECURITY_AUDIT_SUMMARY.md  SECURITY_CHECKLIST.md  SECURITY_FIX_LOG.md  SECURITY_FIX_LOG_ISSUE2.md  SECURITY_FIX_SUMMARY.md  SECURITY_IMPLEMENTATION_LOG.md  SECURITY_QUICK_REFERENCE.md  SECURITY_REVIEW_MYCOUCH_ONLY.md  (+60 more)
.agent/: agent.md
.beads/: issues.jsonl
.claude/: settings.local.json
.github/workflows/: deploy-proxy.yml  deploy.yml
config/: api_keys.json.example  mycouch.service
couchdb_data/: _dbs.couch  _nodes.couch
couchdb_data/shards/00000000-7fffffff/: couch-sitter-log.1767113888.couch  couch-sitter.1767079706.couch  roady-staging.1767332551.couch  roady.1767079694.couch
couchdb_data/shards/80000000-ffffffff/: roady.1767079694.couch  (+3 more)
docs/: CLERK_SETUP.md  DEBUGGING.md  GETTING_STARTED.md  INTEGRATION_PLAN.md  JWT_SESSION_ARCHITECTURE.md  LINUX_DEPLOYMENT_PROXY.md  README.md  SECURITY_CHECKLIST.md  TENANT_DETERMINATION.md  TENANT_MODE.md  VIRTUAL_TABLES_API.md
jwks_cache/: desired-lab-27.clerk.accounts.dev.json  enabled-hawk-56.clerk.accounts.dev.json
prd/: DESIGN_SUMMARY.md  PRD-audit-logging.md  PRD-jwt-proxy.md  PRD-shared-tenants-invitations.md  PRD.md  README.md  VIRTUAL_TABLES_PRD.md  nostr-nip98-auth.md  prd-dal.md  prd-tenant-creation.md  tenancy-design.md
src/couchdb_jwt_proxy/: __init__.py  auth_log_service.py  auth_middleware.py  bootstrap.py  check_port.py  cleanup_service.py  clerk_service.py  cli.py  couch_sitter_service.py  dal.py  index_bootstrap.py  invite_service.py  jwks_cache.py  local_jwks_client.py  main.py  session_service.py  tenant_access_middleware.py  tenant_routes.py  tenant_service.py  tenant_validation.py  user_tenant_cache.py  virtual_tables.py
tests/: __init__.py  conftest.py  reproduce_naming_issue.py  test_admin_tenant_protection.py  test_cascade_delete.py  test_cleanup_service.py  test_clerk_service.py  test_couch_sitter_service.py  test_dal_standalone.py.bak  test_database_whitelist.py  test_jwt_fallback_fix.py  test_jwt_template_validation.py  test_jwt_token_leakage_fix.py  test_legacy_app.py  test_local_docs.py  test_main.py  test_memory_dal_apis.py  test_network_integration.py  test_nip98_auth.py  test_rate_limiting.py  test_reproduce_issue.py  test_service_integration.py  test_session_service.py  test_simple_services.py.bak  test_tenant_extraction.py  test_tenant_id_validation.py  test_tenant_invitations.py  test_tenant_isolation.py  test_user_id_validation.py  test_user_tenant_cache.py  test_virtual_endpoints_manual.py  test_virtual_tables.py
(+6 files in other folders)
