[project]
name = "couchdb-jwt-proxy"
version = "1.0.0"
description = "HTTP proxy for CouchDB with JWT authentication"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Roady Team"}
]

dependencies = [
    "fastapi",
    "uvicorn",
    "httpx>=0.24.0",           # async HTTP client (used by DAL, tests, starlette TestClient)
    "python-dotenv",           # .env loading
    "slowapi>=0.1.5",          # Rate limiting
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "pytest-cov==4.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
pythonpath = ["src"]

[tool.pytest_asyncio]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["couchdb_jwt_proxy"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
